[package]
name = "breezy-timer"
version = "0.1.0"
authors = ["Ed <barp.edoardo@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["benchmark", "benchmarking", "timing", "performance"]
categories = ["development-tools", "development-tools::profiling"]
description = "Painless and production friendly timers"
repository = "https://github.com/dominusmi/rust-breezy-timer"
exclude = [".idea"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpu-time = "1.0.0"
global = "0.4.3"

[dev-dependencies]
criterion = "0.3.4"
rand = "0.8.3"

[[bench]]
name = "performance_benchmarks"
harness = false

[features]
"breezy_timer" = []