[package]
name = "breezy-timer-lib"
version = "1.0.0"
authors = ["Ed <barp.edoardo@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["benchmark", "benchmarking", "timing", "performance"]
categories = ["development-tools", "development-tools::profiling"]
description = "Painless and production friendly timers"
repository = "https://github.com/dominusmi/rust-breezy-timer"
exclude = [".idea"]
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpu-time = "1.0.0"

[features]
"breezy_timer" = []